# ModelarDB-RS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-cluster.yml  docker-compose-minio.yml  docker-compose-single.yml  docker-compose.yml
.github/workflows/: ast-grep.yml  build-lint-and-test.yml  build-lint-test-and-upload.yml  cargo-build-lint-and-test-on-pr-and-push.yml  cargo-build-lint-and-test.yml  cargo-test-on-pr.yml  python-unittest-on-pr-and-push.yml
client/: Cargo.toml
client/src/: helper.rs  main.rs
crates/modelardb_auth/: Cargo.toml
crates/modelardb_auth/src/: lib.rs
crates/modelardb_auth/src/authenticator/: mock.rs  mod.rs  no_auth.rs
crates/modelardb_bulkloader/: Cargo.toml
crates/modelardb_bulkloader/src/: main.rs
crates/modelardb_client/: Cargo.toml
crates/modelardb_client/src/: error.rs  errors.rs  helper.rs  main.rs
crates/modelardb_common/: Cargo.toml
crates/modelardb_common/src/: arguments.rs  error.rs  errors.rs  lib.rs  macros.rs  parser.rs  remote.rs  remote_data_folder.rs  schemas.rs  storage.rs  types.rs
crates/modelardb_common/src/metadata/: compressed_file.rs  delta_metadata.rs  mod.rs  model_table_metadata.rs  table_metadata_manager.rs
crates/modelardb_common/src/test/: data_generation.rs  (+1 more)
crates/modelardb_common_test/: Cargo.toml
crates/modelardb_common_test/src/: data_generation.rs  lib.rs
crates/modelardb_compression/: Cargo.toml
crates/modelardb_compression/src/: compression.rs  error.rs  errors.rs  lib.rs  merge.rs  types.rs
crates/modelardb_compression_python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/modelardb_compression_python/src/: convert.rs  lib.rs
crates/modelardb_compression_python/tests/: __init__.py
crates/modelardb_embedded/: Cargo.toml
crates/modelardb_embedded/bindings/c/: modelardb_embedded.h
crates/modelardb_embedded/bindings/python/: MANIFEST.in  pyproject.toml  setup.py
crates/modelardb_embedded/bindings/python/docs/: Makefile  conf.py  index.rst  make.bat
crates/modelardb_embedded/bindings/python/docs/_static/: .gitignore
crates/modelardb_embedded/bindings/python/docs/api/: error_bound.rst  ffi_array.rst  modelardb.rst  node.rst  operations.rst  table.rst
crates/modelardb_embedded/bindings/python/modelardb/: __init__.py  cffi.py  error_bound.py  ffi_array.py  node.py  operations.py  table.py
crates/modelardb_embedded/bindings/python/modelardb_embedded/: __init__.py
crates/modelardb_embedded/bindings/python/modelardbe/: __init__.py
crates/modelardb_embedded/bindings/python/tests/: __init__.py  test_error_bound.py  test_ffi_array.py  test_operations.py  test_table.py
crates/modelardb_embedded/src/: capi.rs  error.rs  lib.rs
crates/modelardb_embedded/src/modelardb/: client.rs  data_folder.rs  mod.rs
crates/modelardb_embedded/src/operations/: client.rs  data_folder.rs  mod.rs
crates/modelardb_macros/: Cargo.toml
crates/modelardb_macros/src/: lib.rs
crates/modelardb_manager/: Cargo.toml
crates/modelardb_manager/src/: cluster.rs  data_folder.rs  delta_metadata.rs  error.rs  errors.rs  main.rs  metadata.rs  remote.rs  types.rs
crates/modelardb_query/: Cargo.toml
crates/modelardb_query/src/: error.rs  errors.rs  lib.rs
crates/modelardb_server/: Cargo.toml
crates/modelardb_server/src/: cluster.rs  common_test.rs  configuration.rs  context.rs  data_folders.rs  error.rs  main.rs  manager.rs  metadata.rs  parser.rs  remote.rs
crates/modelardb_server/src/cluster/: mod.rs
crates/modelardb_server/src/metadata/: compressed_file.rs  mod.rs  model_table_metadata.rs
crates/modelardb_server/src/optimizer/: mod.rs  model_simple_aggregates.rs
crates/modelardb_server/src/query/: data_sinks.rs  generated_as_exec.rs  grid_exec.rs  mod.rs  model_table.rs  sorted_join_exec.rs  storage_engine_data_sink.rs  table.rs
crates/modelardb_server/src/remote/: auth_layer.rs  mod.rs
crates/modelardb_server/src/storage/: compressed_data_buffer.rs  compressed_data_manager.rs  data_sinks.rs  data_transfer.rs  mod.rs  types.rs  uncompressed_data_buffer.rs  uncompressed_data_manager.rs
crates/modelardb_server/tests/: integration_test.rs
crates/modelardb_storage/: Cargo.toml
crates/modelardb_storage/src/: .#delta_lake.rs  data_folder.rs  delta_lake.rs  error.rs  lib.rs  parser.rs  test.rs  write_ahead_log.rs
crates/modelardb_storage/src/data_folder/: cluster.rs  delta_table_writer.rs  mod.rs
crates/modelardb_storage/src/metadata/: mod.rs  model_table_metadata.rs  table_metadata_manager.rs  time_series_table_metadata.rs
crates/modelardb_storage/src/optimizer/: mod.rs  model_simple_aggregates.rs
crates/modelardb_storage/src/query/: generated_as_exec.rs  grid_exec.rs  metadata_table.rs  mod.rs  model_table.rs  normal_table.rs  sorted_join_exec.rs  time_series_table.rs
crates/modelardb_test/: Cargo.toml
crates/modelardb_test/src/: data_generation.rs  lib.rs  table.rs
crates/modelardb_types/: Cargo.toml  build.rs
crates/modelardb_types/src/: error.rs  errors.rs  flight.proto  functions.rs  lib.rs  macros.rs  schemas.rs  types.rs
docs/dev/: README.md  storage-engine.md
docs/user/: README.md
rules/: extra_space_character.yml  leftover_debugging.yml  missing_punctuation.yml  test_not_named_test.yml
server/: Cargo.toml
server/src/: catalog.rs  compression.rs  engine.rs  errors.rs  ingestion.rs  macros.rs  main.rs  metadata.rs  models.rs  optimizer.rs  parser.rs  remote.rs  storage.rs  tables.rs  types.rs
server/src/metadata/: mod.rs  model_table_metadata.rs  parser.rs
server/src/models/: bits.rs  gorilla.rs  mod.rs  pmc_mean.rs  pmcmean.rs  swing.rs  timestamps.rs
server/src/optimizer/: mod.rs  model_simple_aggregates.rs
server/src/query/: grid_exec.rs  mod.rs  sorted_join_exec.rs
server/src/storage/: compressed_data_buffer.rs  compressed_data_manager.rs  data_point.rs  data_transfer.rs  mod.rs  segment.rs  time_series.rs  uncompressed_data_buffer.rs  uncompressed_data_manager.rs
server/tests/: ingestion_tests.rs  integration_test.rs
src/: catalog.rs  engine.rs  main.rs  models.rs  optimizer.rs  tables.rs
(+16 files in other folders)
