# Copyright 2021 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
arrow = "57.0.0"
arrow-flight = "57.0.0"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.43"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
datafusion = "52.1.0"
datafusion-proto = "52.1.0"
delta_kernel = "0.19.2"
deltalake = "0.31.0"
dirs = "6.0.0"
futures = "0.3.31"
log = "0.4.29"
object_store = "0.12.4"
proptest = "1.10.0"
prost = "0.14.3"
prost-build = "0.14.3"
rand = "0.9.2"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
snmalloc-rs = "0.3.8"
sqlparser = "0.59.0"
sysinfo = "0.38.2"
tempfile = "3.25.0"
tokio = "1.49.0"
tokio-stream = "0.1.18"
toml = "1.0.2"
tonic = "0.14.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
uuid = "1.21.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
panic = 'unwind'
