# Copyright 2021 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
arrow = "58.0.0"
arrow-flight = "58.0.0"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
datafusion = "53.1.0"
datafusion-proto = "53.1.0"
delta_kernel = { package = "buoyant_kernel", version = "0.22.2" }
deltalake = "0.32.4"
dirs = "6.0.0"
futures = "0.3.32"
http = "1.4.0"
http-body-util = "0.1.3"
log = "0.4.29"
object_store = "0.13.2"
proptest = "1.11.0"
prost = "0.14.3"
prost-build = "0.14.3"
rand = "0.10.1"
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snmalloc-rs = { version = "0.7.4", features = ["usecxx17"]} # usecxx17 to avoid error with MSVC 2026.
sqlparser = "0.61.0"
sysinfo = "0.38.2"
tempfile = "3.27.0"
tokio = "1.52.2"
tokio-stream = "0.1.18"
toml = "1.1.2"
tonic = "0.14.4"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = "1.21.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
panic = 'unwind'
