[package]
name = "mdb"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[dependencies]
arrow = "20.0.0"
arrow-flight = "20.0.0"
tonic = "0.8.0"
tokio = "1.20.1"
rustyline = "10.0.0"
dirs = "4.0.0"

# Enable default features for serde_json as it cannot compile without std
serde_json = { version = "1.0.83", features = ["preserve_order"] }