[package]
name = "modelardbd"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[dependencies]
arrow-flight = "31.0.0"
async-trait = "0.1.63"
bytes = "1.3.0"
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev="350cb47289a76e579b221fe374e4cf09db332569" }
futures = "0.3.25"
object_store = { version = "0.5.3", features = ["aws"] }
ringbuf = "0.3.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
snmalloc-rs = "0.3.3"
sqlparser = "0.30.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "signal"] }
tonic = "0.8.3"

# Version 30.0.0 or newer is needed for integration with object_store through ParquetObjectReader.
# For compatibility with Apache Arrow DataFusion, a yet to be released version of it was needed.
parquet = { version = "31.0.0", features = ["object_store"] }

# Log is a dependency so the compile time filters for log and tracing can be set to the same values.
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = "0.3.16"

[dev-dependencies]
proptest = "1.0.0"
rand = "0.8.5"
serial_test = "0.10.0"
sysinfo = "0.27.7"
tempfile = "3.3.0"

# Make machete ignore dependencies that are required but not explicitly used in the source code.
[package.metadata.cargo-machete]
ignored = ["log"]
