# Copyright 2025 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "modelardb_bulkloader"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[lints]
workspace = true

[[bin]]
name = "modelardbb"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true, features = ["ffi"] }
datafusion.workspace = true
deltalake.workspace = true
futures.workspace = true
modelardb_embedded = { path = "../modelardb_embedded" }
modelardb_storage = { path = "../modelardb_storage" }
modelardb_types = { path = "../modelardb_types" }
sysinfo.workspace = true
tokio.workspace = true
