[package]
name = "modelardb_client"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[[bin]]
name = "modelardb"
path = "src/main.rs"

[dependencies]
arrow = "32.0.0"
arrow-flight = "32.0.0"
bytes = "1.4.0"
dirs = "4.0.0"
rustyline = "10.1.1"
tokio = "1.25.0"
tonic = "0.8.3"
