[package]
name = "modelardb_compression_python"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[lib]
name = "modelardb_compression_python"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "32.0.0", features = ["ffi"] }
modelardb_common = { path = "../modelardb_common" }
modelardb_compression = { path = "../modelardb_compression" }
pyo3 = { version = "0.17.3", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.17.3"

[package.metadata.cargo-machete]
ignored = ["pyo3_build_config"]
