# Copyright 2023 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "modelardb_compression_python"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[lib]
name = "modelardb_compression_python"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "34.0.0", features = ["ffi"] }
modelardb_common = { path = "../modelardb_common" }
modelardb_compression = { path = "../modelardb_compression" }
pyo3 = { version = "0.18.1", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.18.1"

[package.metadata.cargo-machete]
ignored = ["pyo3_build_config"]
