# Copyright 2025 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "modelardb_embedded"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[lib]
# cdylib is for dynamically linking with process that use bindings.
# lib is for statically linking with a Rust crate like bulkloader.
crate-type = ["cdylib", "lib"]
name = "modelardbe"

[dependencies]
arrow = { workspace = true, features = ["ffi"] }
arrow-flight.workspace = true
async-trait.workspace = true
datafusion.workspace = true
deltalake = { workspace = true, features = ["datafusion", "s3"] }
futures.workspace = true
modelardb_common = { path = "../modelardb_common" }
modelardb_compression = { path = "../modelardb_compression" }
modelardb_storage = { path = "../modelardb_storage" }
modelardb_types = { path = "../modelardb_types" }
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
tempfile.workspace = true
