[package]
name = "modelardb_server"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[[bin]]
name = "modelardbd"
path = "src/main.rs"

[dependencies]
arrow-flight = "31.0.0"
async-trait = "0.1.64"
bytes = "1.3.0"
datafusion = "17.0.0"
futures = "0.3.26"
modelardb_common = { path = "../modelardb_common" }
modelardb_compression = { path = "../modelardb_compression" }
object_store = { version = "0.5.3", features = ["aws"] }
parquet = { version = "31.0.0", features = ["object_store"] }  # Enables ParquetObjectReader.
ringbuf = "0.3.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
snmalloc-rs = "0.3.3"
sqlparser = "0.30.0"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "signal"] }
tonic = "0.8.3"
uuid = "1.2.2"

# Log is a dependency so the compile time filters for log and tracing can be set to the same values.
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = "0.3.16"

[dev-dependencies]
proptest = "1.0.0"
serial_test = "0.10.0"
sysinfo = "0.27.7"
tempfile = "3.3.0"

# Make machete ignore dependencies that are required but not explicitly used in the source code.
[package.metadata.cargo-machete]
ignored = ["log"]
