# Copyright 2023 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "modelardb_server"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[[bin]]
name = "modelardbd"
path = "src/main.rs"

[dependencies]
arrow-flight = "34.0.0"
async-trait = "0.1.66"
bytes = "1.4.0"
datafusion = "21.0.0"
futures = "0.3.27"
modelardb_common = { path = "../modelardb_common" }
modelardb_compression = { path = "../modelardb_compression" }
object_store = { version = "0.5.5", features = ["aws", "azure"] }
parquet = { version = "34.0.0", features = ["object_store"] }
ringbuf = "0.3.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
snmalloc-rs = "0.3.3"
sqlparser = "0.32.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "signal"] }
tokio-stream = "0.1.12"
tonic = "0.8.3"
uuid = "1.3.0"

# Log is a dependency so the compile time filters for log and tracing can be set to the same values.
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = "0.3.16"

[dev-dependencies]
proptest = "1.1.0"
serial_test = "1.0.0"
sysinfo = "0.28.4"
tempfile = "3.4.0"

[package.metadata.cargo-machete]
ignored = ["log"]
