# Copyright 2023 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "modelardb_server"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[[bin]]
name = "modelardbd"
path = "src/main.rs"

[dependencies]
arrow-flight.workspace = true
async-trait.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
crossbeam-queue.workspace = true
dashmap.workspace = true
datafusion.workspace = true
deltalake = { workspace = true, features = ["datafusion"] }
futures.workspace = true
modelardb_common = { path = "../modelardb_common" }
modelardb_compression = { path = "../modelardb_compression" }
modelardb_storage = { path = "../modelardb_storage" }
modelardb_types = { path = "../modelardb_types" }
object_store = { workspace = true, features = ["aws", "azure"] }
snmalloc-rs = { workspace = true, features = ["build_cc"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-stream.workspace = true
tonic.workspace = true
uuid.workspace = true

# Log is a dependency so the compile time filters for log and tracing can be set to the same values.
log = { workspace = true, features = ["max_level_debug", "release_max_level_info"] }
tracing = { workspace = true, features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber.workspace = true

[dev-dependencies]
proptest.workspace = true
sysinfo.workspace = true
tempfile.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]
