# Copyright 2024 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "modelardb_storage"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[dependencies]
arrow-flight.workspace = true
arrow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
datafusion.workspace = true
deltalake.workspace = true
futures.workspace = true
modelardb_common = { path = "../modelardb_common" }
modelardb_compression = { path = "../modelardb_compression" }
modelardb_types = { path = "../modelardb_types" }
object_store = { workspace = true, features = ["aws", "azure"] }
tokio = { workspace = true }
tonic.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
