# Copyright 2024 The ModelarDB Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "modelardb_storage"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
authors = ["Soeren Kejser Jensen <devel@kejserjensen.dk>"]

[lints]
workspace = true

[dependencies]
arrow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono = "0.4.41"
dashmap.workspace = true
datafusion.workspace = true
datafusion-proto.workspace = true
deltalake = { workspace = true, features = ["datafusion", "s3"] }
futures.workspace = true
modelardb_compression = { path = "../modelardb_compression" }
modelardb_types = { path = "../modelardb_types" }
object_store = { workspace = true, features = ["aws", "azure"] }
sqlparser.workspace = true
tokio = { workspace = true }
tonic.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
modelardb_test = { path = "../modelardb_test" }
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
